# ALPHA

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  render.yaml
apps/api/: buckets.py  config.py  db.py  deps.py  events.py  idempotency.py  main.py  models.py  retrigger.py  runs.py  scheduler.py  serializers.py
apps/api/routes/: analyze.py  buckets.py  health.py  portfolio.py  price.py  runs.py  watchlist.py
apps/api/tests/: conftest.py  test_analyze.py  test_health.py  test_idempotency_key.py  test_intraday_persistence.py  test_runs.py  test_watchlist_portfolio.py
apps/web/: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  postcss.config.mjs  tsconfig.json
apps/web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
apps/web/app/analyze/: page.tsx
apps/web/app/portfolio/: page.tsx
apps/web/app/runs/: page.tsx
apps/web/app/runs/[id]/: page.tsx
apps/web/app/watchlist/: page.tsx
apps/web/components/: animated-number.tsx  copy-button.tsx  empty-state.tsx  page-header.tsx  signal-badge.tsx  strategy-buttons.tsx  ticker-multi-select.tsx  watchlist-button.tsx
apps/web/components/analyze/: agent-row.tsx  analyze-view.tsx  debate-panel.tsx  decision-card.tsx  override-banner.tsx  pillar-radar.tsx  price-chart.tsx  reasoning-stream.tsx  recent-list.tsx  ticker-form.tsx
apps/web/components/layout/: shell.tsx  sidebar.tsx
apps/web/components/runs/: agent-node.tsx  animated-edge.tsx  execution-dag.tsx  runs-view.tsx  strategy-runs-view.tsx  trace-timeline.tsx
apps/web/components/ui/: badge.tsx  button.tsx  card.tsx  modal.tsx  progress.tsx  separator.tsx  skeleton.tsx  toast.tsx
apps/web/lib/: agents.ts  api.ts  fonts.ts  format.ts  market-hours.ts  queries.ts  run-queue.ts  run-stream.ts  store.ts  strategy-store.ts  strategy.ts  tickers.ts  use-count-up.ts  utils.ts  watchlist-store.ts
apps/web/types/: api.ts
eval/: README.md  __init__.py  backtest.py  benchmarks.py  historical_context.py  metrics.py  portfolio.py  reports.py  runner.py
eval/scenarios/: README.md  __init__.py  _factory.py  aapl_2023_q1_earnings_beat.json  all_pillars_aligned_strong_buy.json  bear_flag_breakdown.json  ge_2018_dividend_cut.json  guidance_withdrawn_panic.json  kogi_defensive_steady.json  macro_recession_cyclical_pressure.json  meta_2022_ad_slowdown.json  mixed_signals_offsetting.json  msft_2023_cloud_steady.json  nvda_2023_ai_breakout.json  partial_data_technical_only.json  peloton_2022_post_pandemic_collapse.json  runner.py  tech_golden_cross_breakout.json  tsla_2024_delivery_miss.json  wirecard_fraud_signals.json
eval/tests/: test_benchmarks.py  test_metrics.py  test_portfolio.py  test_reports.py  test_runner_smoke.py  test_scenarios.py
infra/: docker-compose.yml
reports/: aapl_q1_2024_smoke.html  us_tech_2023.html
scripts/: debug_context.py  export_runs_to_excel.py
(+2 files in other folders)
