[project]
name = "fin-agent"
version = "0.1.0"
description = "Multi-agent financial analysis system"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "pydantic>=2.6",
    "httpx>=0.27",
    "anyio>=4.3",
    "yfinance>=0.2.40",
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12",
    "websockets>=12.0",
    "pandas>=2.2",
    "redis>=5.0",
    "qdrant-client>=1.9",
    "rank-bm25>=0.2.2",
    "fastembed>=0.3",
    "tiktoken>=0.7",
    "langgraph>=0.2",
    "openai>=1.30.0",
    "instructor>=1.5",
    "litellm>=1.55",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-dotenv>=1.0",
    "sse-starlette>=2.1",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "langgraph-checkpoint-redis>=0.0.4",
]


[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "mypy>=1.9",
    "ruff>=0.4",
]
rag-pdf = ["unstructured[pdf]>=0.13"]
rag-openai = ["openai>=1.30"]
rag-rerank = ["cohere>=5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages/core", "packages/data", "packages/shared", "packages/agents", "packages/rag", "apps/api"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "mypy>=1.9",
    "ruff>=0.4",
    "openpyxl>=3.1",
    "tzdata>=2024.1",
]


[tool.ruff]
line-length = 100
target-version = "py311"
src = ["packages", "apps"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
files = ["packages", "apps"]

[[tool.mypy.overrides]]
module = ["packages.core.test_evaluator", "tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["packages", "apps", "eval"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--cov=packages",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "-m", "not integration and not live",
]
markers = [
    "integration: hits live external APIs (market data); requires credentials",
    "live: hits live LLM APIs; requires at least one LLM API key",
    "requires_env(*names): skip unless the given env vars are set",
]

[tool.coverage.run]
branch = true
source = ["packages"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
